Fix grammar and change favicon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
 
   <!--====== Title ======-->
-  <title>Trámite RVOE - Obtén el Reconocimiento Oficial para tu Institución</title>
+  <title>Plataforma Educativa en Línea – Impulsa tu Institución al Mundo Digital</title>
 
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -142,7 +142,7 @@
                 cursos, estudiantes y certificaciones en un solo lugar, sin complicaciones técnicas.
               </p>
               <div class="hero_btn mt-10">
-                <a class="main-btn" href="#contacto">Contactanos</a>
+                <a class="main-btn" href="#contacto">Contáctanos</a>
               </div>
             </div>
             <!-- header hero content -->
@@ -521,7 +521,7 @@
               <!-- We can remove or keep meta if needed; replaced text for demonstration -->
               <ul class="blog_meta flex justify-between">
                 <li class="text-[#747E88] text-sm md:text-base">
-                  Moodle para K-12
+                  Moodle para Educación Básica
                 </li>
               </ul>
               <h3 class="blog_title">
@@ -533,9 +533,6 @@
               <p class="text-gray-600 mt-3 text-sm">
                 Diseña aulas virtuales que inspiran y potencian el desarrollo de estudiantes en educación básica.
               </p>
-              <a href="javascript:void(0)" class="inline-block text-[#38424D] font-semibold mt-6 hover:text-[#f94f4f]">
-                Más información
-              </a>
             </div>
           </div>
         </div>
@@ -564,9 +561,6 @@
                 Ofrece un entorno educativo innovador que se adapta a las necesidades de docentes y estudiantes en
                 niveles avanzados.
               </p>
-              <a href="javascript:void(0)" class="inline-block text-[#38424D] font-semibold mt-6 hover:text-[#f94f4f]">
-                Más información
-              </a>
             </div>
           </div>
         </div>
@@ -596,9 +590,6 @@
                 Facilita la capacitación laboral y técnica a través de un LMS accesible y flexible, disponible en todo
                 momento.
               </p>
-              <a href="javascript:void(0)" class="inline-block text-[#38424D] font-semibold mt-6 hover:text-[#f94f4f]">
-                Más información
-              </a>
             </div>
           </div>
         </div>
@@ -672,14 +663,6 @@
           <p id="faq5" class="mt-4 hidden text-gray-600 faq-content">Sí, puedes integrar herramientas como Zoom, Google
             Meet o Microsoft Teams para clases en vivo.</p>
         </div>
-        <div class="border border-gray-300 rounded-xl p-6 bg-white shadow-md">
-          <button class="w-full text-left flex justify-between items-center faq-toggle" data-id="faq6">
-            <span class="text-lg font-semibold text-[#38424D]">¿La plataforma cumple con regulaciones educativas?</span>
-            <i class="lni lni-chevron-down transition-transform duration-300"></i>
-          </button>
-          <p id="faq6" class="mt-4 hidden text-gray-600 faq-content">Sí, nuestra plataforma está diseñada para cumplir
-            con normativas de educación en línea y certificaciones oficiales.</p>
-        </div>
       </div>
     </div>
   </section>
@@ -696,7 +679,7 @@
         <div class="w-full lg:w-1/2">
           <div class="section_title text-center pb-6">
             <h5 class="text-base md:text-xl font-semibold text-[#F94F4F]">
-              Nuestra Garantia
+              Nuestra Garantía
             </h5>
             <h4 class="text-[#38424D] text-2xl md:text-4xl font-bold mt-4">
               Soporte y Garantía
